--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,72 @@
 :root {
     --white: #ffffff;
     --babyWhite: #FDFFFC;
-    --mainColor: #2EC4B6;
+    --mainColor: #038373;
     --secondColor: #E71D36;
-    --lightGray: #4A5859;
+    --lightGray: #d3d3d3;
     --darkGray: #32373B; 
-  }
+    --darkBlack: #001220;
+    --mainFont: 'Roboto', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400&display=swap');
 
 
 body {
     padding: 0;
     margin: 0;
+    background-color: var(--white);
+}
+
+/* INDEX.HTML STYLE */
+
+.container-i {
+    font-style: var(--mainFont);
+    width: 100%;
+}
+.svg-img-l {
+    background-image: url('../img/background-1.svg');
+}
+.background-i {
+    aspect-ratio: 960/560;
+    width: 100%;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.relative-i {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.absolute-i {
+   position: absolute;
+   left: calc(50% - 225px);
+   top: calc(50% - 300px);
+   width: 450px;
+   height: 500px;
+   background-color: var(--white);
+   border-radius: 25px;
+   box-shadow:0px 0px 30px var(--lightGray);
+}
+
+.absolute-i h2 {
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 25px;
+    border-radius: 25px 10px 25px 10px;
+    background-color: var(--mainColor);
+    color: var(--babyWhite);
+    font-weight: 600;
+}
+
+
+@media only screen and (max-width: 767px) {
+    .background-i c{
+        aspect-ratio: unset;
+    }
 }
