--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,9 @@
 <head>
 
     <!--HEAD META EXTRA-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!--HEAD META EXTRA-->
@@ -16,17 +18,29 @@
 
 <body>
     <div class="container-i">
-        <div class="background-i svg-img-l" id="background">
-            <div class="relative-i">
-                <div class="absolute-i">
-                    <h2 class="text-center py-4 text-2xl bold">Project EMD</h2>
-                </div>
+        <h1 class="text-center text-4xl">ACCOUNT LOGIN</h1>
+        <div class="box p-7">
+            <div class="img mt-5">
+                <i class="fab fa-teamspeak text-3xl text-white"></i>
+
+
             </div>
+            <h3 class="text-center pt-3 text-2xl">Login</h3>
+            <form class="block w-2/3" action="loginPage()" method="POST">
+                <label class="block italic text-xl pt-2 pb-1" for="">Username</label>
+                <div class="line"></div>
+                <input class="w-full rounded py-1 px-2" type="text" name="username" id="username">
+                <label class="block italic text-xl pt-2 pb-1" for="">Password</label>
+                <div class="line"></div>
+                <input class="w-full rounded py-1 px-2" type="password" name="password" id="">
+                <input class="block sub-btn text-2xl py-2 px-7 rounded-xl text-white" type="submit" value="Login">
+            </form>
         </div>
     </div>
 </body>
 
 <script>
+    /*
     $(window).resize(function () {
 
         if ($(window).width() <= 767) {
@@ -48,6 +62,7 @@
             $("#background").addClass("svg-img-l");
         }
     });
+    */
 </script>
 
 </html>
