--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,13 +26,13 @@
 
             </div>
             <h3 class="text-center pt-3 text-2xl">Login</h3>
-            <form class="block w-2/3" action="loginPage()" method="POST">
+            <form class="block w-2/3" action="/" method="POST">
                 <label class="block italic text-xl pt-2 pb-1" for="">Username</label>
                 <div class="line"></div>
-                <input class="w-full rounded py-1 px-2" type="text" name="username" id="username">
+                <input class="w-full rounded py-1 px-2" type="text" name="loginUsername" id="loginUsername">
                 <label class="block italic text-xl pt-2 pb-1" for="">Password</label>
                 <div class="line"></div>
-                <input class="w-full rounded py-1 px-2" type="password" name="password" id="">
+                <input class="w-full rounded py-1 px-2" type="password" name="loginPassword" id="loginPassword">
                 <input class="block sub-btn text-2xl py-2 px-7 rounded-xl text-white" type="submit" value="Login">
             </form>
         </div>
