--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,7 +1,8 @@
 :root {
 
     --mainFont: 'Roboto', sans-serif;
-    --bgColor: #CBCDCB;
+    --bgColor: #e5e5e5;
+    --bgPop: #f2f3f2;
     --mainRed: #C44B4F;
     --mainBlue: #607D86;
     --metalGray: #4C5355;
@@ -22,9 +23,11 @@ body {
     max-height: 100vh !important;
     overflow-y: hidden;
 }
+
 .svg-image {
     background-image: url('/img/wave.svg');
 }
+
 .wave {
     aspect-ratio: 900/600;
     width: 100%;
@@ -35,11 +38,13 @@ body {
     position: absolute;
     margin: 0 auto;
 }
+
 .i-left h1 {
     font-weight: 700;
     color: white;
     font-size: 100px;
 }
+
 .box-i {
     width: 400px;
     height: 500px;
@@ -48,25 +53,167 @@ body {
     margin: 0 auto;
     margin-top: 40px;
 }
+
 .box-i h2 {
     color: var(--metalGray);
     font-weight: 700;
 }
-.input-div-i i{
+
+.input-div-i i {
     color: var(--mainBlue);
 }
+
 .input-div-i input:focus {
     outline: none;
 }
+
 .input-div-i input {
     background-color: transparent;
 }
+
 .input-div-i input::placeholder {
     color: var(--mainBlue);
 }
+
 .input-div-i {
-    background-color: #f2f3f2;
+    background-color: var(--bgPop);
 }
+
 .i-submit {
     background-color: var(--mainBlue);
+}
+
+/* INDEX.HTML STYLE */
+
+/* ADMINVIEW.HTML STYLE */
+
+.panel-container {
+    background-color: var(--bgPop);
+}
+
+.panel-content {
+    background-color: var(--bgColor);
+}
+
+.logo_title {
+    font-size: 40px;
+    font-weight: 700;
+    background: #ff416c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff416c, #ff4b2b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff416c, #ff4b2b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.adduser {
+    border-radius: 40px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    background: #ff416c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff416c, #ff4b2b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff416c, #ff4b2b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
+.search-box {
+    font-size: 16px;
+    width: 400px;
+    background-color: transparent;
+}
+
+.search-box:focus {
+    outline: none;
+}
+
+.user img {
+    max-height: 64px;
+    max-width: 64px;
+    border-radius: 50%;
+    object-fit: contain;
+}
+
+.noti {
+    position: relative;
+}
+
+.notidot {
+    position: absolute;
+    right: -4px;
+    top: -4px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ff416c;
+}
+
+.icon {
+    background: #ff416c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ff416c, #ff4b2b);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ff416c, #ff4b2b);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.active a {
+    font-weight: 700;
+}
+
+.active {
+    border-right: 5px solid #ff416c;
+}
+
+.item-img {
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    background-color: var(--bgColor);
+    position: relative;    
+
+}
+.item-small {
+    position: relative;
+    height: 150px;
+    background-color: var(--bgPop);
+}
+.dots {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+.item-img i {
+    font-size: 25px;
+    color: #ff416c;
+    position: absolute;
+    top: 19px;
+    left: 18px;
+}
+.item-text h1 {
+    font-weight: 700;
+}
+.item-big {
+    position: relative;
+    background-color: var(--bgPop);
+}
+.gmap_canvas {
+    overflow: hidden;
+    border-radius: .25rem .25rem .25rem .25rem;
+    background: none !important;
+    height: 500px;
+    width: 600px;
+}
+.mapouter {
+    position: relative;
+    text-align: right;
+    height: 500px;
+    width: 600px;
 }
