--- a/public/views/adminview.html
+++ b/public/views/adminview.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Panel</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
         </div>
         <div class="main-content-admin flex w-full mt-3">
             <div class="nav-buttons flex flex-col w-1/5 mt-12 px-8">
-                <a class="px-5 py-4 adduser text-white w-full text-center" href=""><span class="text-xl">Add New User
+                <a class="px-5 py-4 adduser text-white w-full text-center" href="/admin/userAdd/"><span class="text-xl">Add New User
                     </span><i class="pl-2 fas fa-plus plus-btn"></i></a>
                 <div class="btn flex align-center mt-20 active">
                     <i class="fas fa-tasks self-center icon w-12 text-xl"></i>
@@ -112,7 +112,7 @@
                     <div class="item-big w-3/4 mx-5 rounded flex">
                         <div class="mapouter">
                             <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-                                    src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                                    src="https://maps.google.com/maps?q=Stockholm&t=&z=13&ie=UTF8&iwloc=&output=embed"
                                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
                                     href="https://123movies-to.org">123movies</a><br>
                             </div>
